--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/Vichy/index/index",
+    "pages/Vichy/ruleDetail/ruleDetail",
     "pages/Vichy/informationWord/informationWord",
     "pages/noFind/noFind",
     "pages/logs/logs"
