--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
   "pages": [
     "pages/Vichy/index/index",
-    "pages/Vichy/informationWord/informationWord",
+    "pages/Vichy/exchangeCode/exchangeCode",
     "pages/Vichy/newExchange/newExchange",
+    "pages/Vichy/informationWord/informationWord",
     "pages/Vichy/exchangeSuccess/exchangeSuccess",
     "pages/Vichy/checkSale/checkSale",
     "pages/Vichy/exchange/exchange",
@@ -17,6 +18,11 @@
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
   "navigateToMiniProgramAppIdList": [
     "wx6b00bfc932f22210"
   ]
