--- a/project.config.json
+++ b/project.config.json
@@ -39,13 +39,39 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 2,
+			"list": [
+				{
+					"id": 0,
+					"name": "pages/Vichy/index/index",
+					"pathName": "pages/Vichy/index/index",
+					"query": "shareMemberId=1181801112118890496",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/Vichy/checkSale/checkSale",
+					"pathName": "pages/Vichy/checkSale/checkSale",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/Vichy/exchangeCode/exchangeCode",
+					"pathName": "pages/Vichy/exchangeCode/exchangeCode",
+					"query": "",
+					"scene": null
+				}
+			]
 		}
 	}
 }
