--- a/project.config.json
+++ b/project.config.json
@@ -22,7 +22,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.3",
-	"appid": "wx7527dd9e3bee0ecd",
+	"appid": "wx847c448281a94341",
 	"projectname": "jjevent",
 	"debugOptions": {
 		"hidedInDevtools": []
