--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "pages": [
     "pages/Vichy/index/index",
+    "pages/Vichy/exchangeSuccess/exchangeSuccess",
     "pages/Vichy/exchangeCode/exchangeCode",
     "pages/Vichy/newExchange/newExchange",
     "pages/Vichy/informationWord/informationWord",
-    "pages/Vichy/exchangeSuccess/exchangeSuccess",
     "pages/Vichy/checkSale/checkSale",
     "pages/Vichy/exchange/exchange",
     "pages/Vichy/ruleDetail/ruleDetail",
@@ -23,6 +23,9 @@
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
+  },
+  "networkTimeout": {
+    "request": 60000
   },
   "navigateToMiniProgramAppIdList": [
     "wx29946485f206d315"
